app/assets/stylesheets/main.css
a{
  text-decoration: none;
}
a:hover{
  text-decoration: none;
}
#total-container{
  display:inline;
}
#totalDisplay{
  display:inline;
}
#messages{
  height: 20em;
  overflow-y: auto;
  margin-bottom: 1.5em;
  width: 80%;
  margin: auto;
}
#messages > div {
  margin-left: 0.5em;
  margin-right: 0.5em;
}

@media (max-device-width: 480px){
  .new-message-container{
    margin-top: -2em;
  }
}

#message-title{
  text-align: center;
  font-size: 2em;
}
#to-user-tag{
  display: inline-block;
  width: 40px;
}
#from-user-tag{
  display: inline-block;
  width: 40px;
}

#submit-message{
  height: 66px;
}

#favorites-button{
  margin-top: 1.7em;
  margin-bottom: 1.7em;
}

#user-info{
  margin-top: 1em;
  margin-bottom: 1em;
}
#listing-btns {
  margin-bottom: 1em;
}
.tabbable {
  margin-top: 2em;
}

#static-map{
  margin-top: 2em;
}
.tab-content{
  margin-top: 1em;
}


.bubble {
  background-image: linear-gradient(bottom, rgb(210,244,254) 25%, rgb(149,194,253) 100%);
background-image: -o-linear-gradient(bottom, rgb(210,244,254) 25%, rgb(149,194,253) 100%);
background-image: -moz-linear-gradient(bottom, rgb(210,244,254) 25%, rgb(149,194,253) 100%);
background-image: -webkit-linear-gradient(bottom, rgb(210,244,254) 25%, rgb(149,194,253) 100%);
background-image: -ms-linear-gradient(bottom, rgb(210,244,254) 25%, rgb(149,194,253) 100%);
background-image: -webkit-gradient(
  linear,
  left bottom,
  left top,
  color-stop(0.25, rgb(210,244,254)),
  color-stop(1, rgb(149,194,253))
);
  border: solid 1px rgba(0, 0, 0, 0.5);
  /* vendor rules */
  border-radius: 20px;
  /* vendor rules */
  box-shadow: inset 0 5px 5px rgba(255, 255, 255, 0.4), 0 1px 3px rgba(0, 0, 0, 0.2);
  /* vendor rules */
  box-sizing: border-box;
  clear: both;
  float: left;
  margin-bottom: 20px;
  padding: 8px 30px;
  position: relative;
  text-shadow: 0 1px 1px rgba(255, 255, 255, 0.7);
  width: auto;
  max-width: 100%;
  word-wrap: break-word;
}

.bubble:before, .bubble:after {
  border-radius: 20px / 10px;
  content: '';
  display: block;
  position: absolute;
}

.bubble:before {
  border: 10px solid transparent;
  border-bottom-color: rgba(0, 0, 0, 0.5);
  bottom: 0;
  left: -7px;
  z-index: -2;
}

.bubble:after {
  border: 8px solid transparent;
  border-bottom-color: #d2f4fe;
  bottom: 1px;
  left: -5px;
}

.bubble--alt {
  background-image: linear-gradient(bottom, rgb(172,228,75) 25%, rgb(122,205,71) 100%);
background-image: -o-linear-gradient(bottom, rgb(172,228,75) 25%, rgb(122,205,71) 100%);
background-image: -moz-linear-gradient(bottom, rgb(172,228,75) 25%, rgb(122,205,71) 100%);
background-image: -webkit-linear-gradient(bottom, rgb(172,228,75) 25%, rgb(122,205,71) 100%);
background-image: -ms-linear-gradient(bottom, rgb(172,228,75) 25%, rgb(122,205,71) 100%);
background-image: -webkit-gradient(
  linear,
  left bottom,
  left top,
  color-stop(0.25, rgb(172,228,75)),
  color-stop(1, rgb(122,205,71))
);
  float: right;
}

.bubble--alt:before {
  border-bottom-color: rgba(0, 0, 0, 0.5);
  border-radius: 20px / 10px;
  left: auto;
  right: -7px;
}

.bubble--alt:after {
  border-bottom-color: #ace44b;
  border-radius: 20px / 10px;
  left: auto;
  right: -5px;
}

#map-container {
  width: 80%;
  margin:0 auto;
}
#map {
  width: 100%;
  height: 50vh;
  border-radius: 2em;
}

.single-listing{
  /*width:80%;*/
  margin:0 auto;
  margin-top:1.5em;
  /*height:300px;*/
}

#listingPreviewInfo{
  padding-top:0.1em;
  padding-left:0px;
}
#listingPreviewInfoBottomText{
  margin-bottom:0px;
}

#listingPageInfo {
  padding: 0 .5em 0 .5em;
}

#space-continue-btn {
  margin: 1em 0;
}

#listing-file-upload {
  margin-bottom: .5em;
}
#propertyTypeMenu p {
  white-space: normal;
}

#vehicleClass p {
  white-space: normal;
}

#submit-listing-btn {
  margin-top: 1em;
}

#p-spot-header {
  margin-bottom: 1em;
}

#proftabs a {
  padding: .8em;
}

ol {
  padding-left: 0;
}
#save-parking-spot {
  margin-top: 3em;
}

#listingPreviewImgDiv{
  padding-right:5px;
}

.debugger {
  border: 1px solid red;
}

#logo {
  margin: 0;
}

#searchSubmitButton {
  margin-bottom: 1em;
}

